tests/a/tests/integrity/fail/fn/fn.2.stderr
error: expected {root}{root}, found {a,root}{a,root}
  --> tests/integrity/fail/fn/fn.2.rs:11:13
   |
11 |     let x = id(5);
   |             ^^^^^
